layouts/v7/skins/vtiger/style.less
/* ... */
/******************************************* 
************* Dashboard Styles *************
********************************************/

.dashboardWidgetHeader .title{
    padding-bottom: 10px;
    font-size: 15px
}

.dashboardWidgetHeader:hover{
    cursor: move;
}

.dashBoardContainer .tabContainer{
    margin-top: 10px;
}

.dashBoardContainer .tabContainer ul{
    margin:0 auto;
}

.dashBoardContainer .tabContainer .nav{
    font-size: 15px;
    background-color: #F0F0F0
}

.dashBoardContainer .tabContainer .tab-content{
    margin-top: 10px;
}

.dashBoardContainer .dashBoardTabContents ul li{
    border : 3px solid #E2E2E4;
    box-shadow: 1px;
    list-style: none;
    padding:15px;
    position : absolute;
}

.dashboardWidgetContent .entryIcon{
    position: relative;
    top:5px;
    padding-right: 10px;
}

.dashBoardWidgetFooter{
    position:absolute;
    left:0;
    bottom:0;
    width:100%;
    height:30px;
    background:#F7F7F7;
    font-size: 14px;
}

.dashBoardWidgetFooter .footerIcons{
    padding:8px 15px 0px 0px;
    color:@blockBorder
}

.dashBoardWidgetFooter .filterContainer{
    position:absolute;
    padding: 10px 7px;
    display:none;
    height:auto;
    width:100%;
    background: white;
    border:1px solid @blockBorder;
    bottom:30px;
    font-size: 11px;
    
    .radio-group input{
        vertical-align: middle;
        margin-top: -1px;
    }
}

.importview-content, 
.customview-content {
    overflow-x: hidden;
    overflow-y: auto;
    max-height: 530px;
}

.dashboardWidgetHeader .userList .select2{
    width : 100% !important;
}

.dashBoardContainer .tabContainer li a .deleteTab{
    margin-left:10px;
    display: inline-block;
    opacity: 0.1;
}

.dashBoardContainer .tabContainer li a .moveTab{
    margin-left:10px;
    display: inline-block;
    opacity: 0.5;
}

.dashBoardContainer .tabContainer .sortable button{
    margin-top:10px;
}

.dashBoardContainer .tabContainer li a:hover .deleteTab{
    display:inline-block;
    opacity: 1;
}

.dashBoardContainer .tabContainer li a  .deleteTab:hover{
    cursor : pointer;
}

#minilistWizardContainer .fieldLabel{
    position : relative;
    top:8px;
}

.dashBoardContainer .dashBoardWidgetFooter a:active,
.dashBoardContainer .dashBoardWidgetFooter a:hover{
    color:black;
}

.muted {
  color: @mutedText;
}

.dashBoardContainer .entryIcon{
    font-size: 120%;
}

.dashBoardContainer .addDashboardTab {
    padding-bottom: 3px;
    i{
        vertical-align: middle;
    }
}
.moreSettings{
    padding-right:18px;
}
.dashBoardContainer .dashboard_notebookWidget_viewarea {
    background-color: @white;
    border: 1px solid @blockBorder;
    min-height : 150px;
}

.dashBoardContainer .dashboard_notebookWidget_textarea {
    min-height: 200px;
    background-color: @notepadTextareaBackground;
    resize: none;
    width:100%;
}
//rewriting css styles

/******************************************* 
********** Picklist DependencyGraph ********
********************************************/

#dependencyGraph{
    .tableHeading{
        text-align: center;
        padding-top: 30px;
        font-size: 1.2em;
        font-weight: bold;
    }
    .depandencyTable{
        .blockHeader{
            background: @timeiconbackgroundcolor;
        }
    }
    .dependencyMapping{
        text-align: center;
        background: @contentsBackground;
        .mCSB_container{
            margin-bottom: 16px !important;
        }
        .pickListDependencyTable{
            border: 0;
            .blockHeader th{
                background: @timeiconbackgroundcolor;
            }
            .selectedCell{
                background: lighten(@baseThemeColor,40%);
            }
        }
    }
}

/******************************************* 
********** Rewriting select2 for consistency********
********************************************/

.select2-container .select2-choice {
    height: 29px;
    border-radius: 1px;
}
.modal {
    z-index:1070;
}
.select2-container .select2-choice {
    height:28px;
}
.vt-default-callout {
    padding: 10px 20px 20px;
    margin: 10px 0;
    border: 1px solid #eee;
    border-left-width: 5px;
    border-radius: 3px;
    &.tagInfoblock{
        padding: 0px 13px 16px;
    }
}

.holidays-container-header{
    background: #fbfbfb;
    border: 1px solid #ddd;
    padding: 10px 15px 25px;
}
.holidays-container-content{
    border: 1px solid #ddd;
    border-top-width: 0;
    padding: 5px 0;
}

.vt-info-callout .vt-callout-header{
    color: #2b9cbd;
}

.companydetailsedit .company-logo-content{
    padding: 10px;
    border: 1px solid @settingsIndexBorder; 
    hr{
        margin: 10px 0;
    }
}
.vt-info-callout{
    border-left-color: #2b9cbd;
}

hr{
    margin: 10px 0;   
}
.alert-mini{
    padding:3px 5px;
    font-size: 10px;
    display:inline-block;
    margin-bottom: 0;

}
.blockHeader h4{
    margin: 10px 0;
}
.blockHeader .btn-group{
    margin-top: 4px;
}
.input-info-addon{
    display: inline-block;
    margin: 1px 10px;
    vertical-align: top;
}
.input-select-addon{
    background: none;
    border:0;
}

.editViewBody .editViewContents{
    max-height:100%;
    padding-bottom: 50px;
}

.help-inline{
    padding:5px;
    display:inline-block;
    border:1px solid #ddd;
    background: #f3f3f3;
    margin-left: -15px;
    float:left;
}
.listViewEntriesCheckBox,
.input-group input[type="checkbox"]{
    vertical-align: middle;
}
.overlayPageContent .modal-overlay-footer{
    margin:0;
}

.full-width .modal-overlay-footer{
    margin-left: 0 !important;
}

.modal-overlay-footer
{
    position:fixed;
    bottom:0;
    background: @modalFooterBackground;
    /*width:100%;*/
    border-left: 42px solid #2c3b49;
    height:60px;
    left:0;
    right:0;
    padding: 15px;
    text-align: right;
    border-top: 1px solid #e5e5e5;  
    z-index:6;
}
.modal-footer-overwrite-style{
    position: initial;
    margin-left: 0px !important
}
.ui-slider .ui-slider-handle{
     z-index:0;//TN-#35081
}
/* ... */

